docs: fix spacing issues on the home page

--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -27,6 +27,7 @@
 
 @media screen and (max-width: 996px) {
   .heroBanner {
+    padding-top: 4rem;
     padding-bottom: 2.5rem;
   }
 }
